[fix] broken width on firefox
Just had to define the width as 50% and set the same value for the min and max width through CSS.

--- a/savepoint/styles/globals.css
+++ b/savepoint/styles/globals.css
@@ -17,6 +17,12 @@ body {
 
 .list-card {
   width: 50rem;
+
+  img {
+    width: 50%;
+    min-width: 50%;
+    max-width: 50%;
+  }
 }
 
 @media screen and (max-width: 768px) {
